Agregando componenete head y footer

--- a/src/app/vdo-player/vdo-player.component.html
+++ b/src/app/vdo-player/vdo-player.component.html
@@ -1,4 +1,5 @@
-<div class="video-player-wrapper">
+<div class="contenedor">
+  <div class="video-player-wrapper">
     <vg-player (onPlayerReady)="videoPlayerInit($event)">
       <vg-overlay-play></vg-overlay-play>
       <vg-buffering></vg-buffering>
@@ -22,9 +23,10 @@
       </video>
     </vg-player>
     <ul class="player-list">
-      <li *ngFor="let vdo of videoItems; let $index = index"
-        (click)="startPlaylistVdo(vdo, $index)" [class.selected]="vdo === currentVideo">
+      <li *ngFor="let vdo of videoItems; let $index = index" (click)="startPlaylistVdo(vdo, $index)"
+        [class.selected]="vdo === currentVideo">
         {{ vdo.name }}
       </li>
     </ul>
   </div>
+</div>
