--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Belanosima', sans-serif;
+  font-family: 'Krub', sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  transition: .3s ease all;
+  background: linear-gradient(to bottom,
+      rgba(15, 128, 203, 0.6),
+      rgba(22, 161, 154, 0.6),
+      rgba(38, 82, 110, 0.45)), url('https://i.pinimg.com/originals/db/0c/e4/db0ce461255cb21f91a2f70c139a38a5.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+
+}
+
+.redFocus:focus {
+  border: 2px solid #FF5049 !important;
+}
+
+.red {
+  color: #FF5049;
+}
