Mejorando style en el componente vdo-player

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,25 +18,25 @@
         <div class="item__contact item__contact--gold">
             <div class="contenedor-icono">
                 <a href="https://mail.google.com/mail/u/1/#inbox" target="_blank" class="gmail">
-                    <img src="https://cdn-icons-png.flaticon.com/512/6244/6244710.png" alt="">
+                  <i class="fa-regular fa-envelope"></i>
                 </a>
             </div>
 
             <div class="contenedor-icono">
                 <a href="https://www.facebook.com/JheysonJhair.AroneAngeles.2003/" target="_blank" class="facebook">
-                    <img src="https://cdn-icons-png.flaticon.com/512/2175/2175193.png" alt="">
+                  <i class="fa-brands fa-facebook"></i>
                 </a>
             </div>
 
             <div class="contenedor-icono">
                 <a href="https://www.instagram.com/jheyson_jhair2003/" target="_blank" class="instagram">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3670/3670274.png" alt="">
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
             </div>
 
             <div class="contenedor-icono">
                 <a href="https://www.youtube.com/" target="_blank" class="youtube">
-                    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384012.png" alt="">
+                  <i class="fa-brands fa-youtube"></i>
                 </a>
             </div>
         </div>
