--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,6 +2,7 @@
     width: 100%;
     position: relative;
     bottom: 0;
+
 }
 
 /*contenedor de contactos*/
@@ -9,27 +10,20 @@
     display: flex;
     width: 100%;
     flex-wrap: wrap;
-    color: #000000;
+    color: rgb(13, 7, 82);
 }
 
 /* Items contacto*/
 .item__contact {
+  padding: 10px;
     width: 25%;
     text-align: center;
-    background: rgba(140, 193, 193, 0.35);
-}
-
-/* Items contacto iconos*/
-.contact__icon {
-    font-size: 24px;
-    color: #113138;
-    line-height: 20px;
-    margin-right: 4px;
+    background: rgb(13, 7, 82);
 }
 
 /* Items titulo*/
 .contact__title {
-    font-size: 16px;
+    font-size: 13px;
     line-height: 20px;
 }
 
@@ -40,19 +34,27 @@
     text-align: center;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.956);
 
 }
-
+i{
+  color: #fff;
+}
 /* Contenedor enlaces FB Instagram Youtube*/
-.item__contact--gold img {
-    height: 26px;
+.item__contact--gold i {
+
+    color: #fff;
+
 }
 
-/* Contenedor iconos redes*/
 .contenedor-icono {
-    margin: 10px 10px 0px 0px;
+  margin: 5px 10px 10px 0px;
+  font-size: 19px;
 }
 
+.contenedor-icono:last-child {
+  margin-right: 0;
+}
 /* Contenedor iconos hover*/
 .contenedor-icono:hover a {
     animation: icono .5s ease;
@@ -87,5 +89,5 @@
     }
 }
 h3{
-    padding-top: 11px;
+    color: #fff;
 }
