--- a/src/styles.css
+++ b/src/styles.css
@@ -16,10 +16,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   transition: .3s ease all;
-  background: linear-gradient(to bottom,
-      rgba(213, 226, 235, 0.755),
-      rgba(197, 204, 203, 0.6),
-      rgba(19, 82, 121, 0.69)), url('./assets/font.jpg');
+  background-color: rgb(229, 229, 229);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
