--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-head></app-head>
-<app-vdo-player></app-vdo-player>
+<div class="container">
+  <div class="div1"><app-vdo-player></app-vdo-player></div>
+  <div class="div2"><app-aside></app-aside></div>
+</div>
+
 <app-footer></app-footer>
