--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,5 @@
+
+
 .footerr {
     width: 100%;
     position: relative;
@@ -18,7 +20,7 @@
   padding: 10px;
     width: 25%;
     text-align: center;
-    background: rgb(13, 7, 82);
+    background: rgba(13, 7, 82, 0.86);
 }
 
 /* Items titulo*/
@@ -34,7 +36,7 @@
     text-align: center;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.956);
+    background-color: rgba(0, 0, 0, 0.9);
 
 }
 i{
