--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form>
     <div class="b">
-      <input placeholder="buscar articulo" type="text" />
+      <input placeholder="BUSCAR VIDEO  " type="text" />
       <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
     </div>
     <div class="te">
@@ -13,10 +13,12 @@
       adicional. ¡Disfruta de tu experiencia musical con Jhair! Saludos,
     </div>
     <div>
-      <label for="mail">Correo electronico</label>
-      <input for="mail" type="email" />
-      al pulsar este boton acepta los terminos y condiciones de Jhair
-      <button>Enviar</button>
+      <div class="b">
+        <label class="ng" for="mail">Correo electrónico</label>
+        <input for="mail" placeholder="anonimo@gmail.com" type="email" />
+      </div>
+      <button class="btn-primary">Enviar</button>
+      <p> Al pulsar este botón <a href="">acepta los terminos y condiciones.</a></p>
     </div>
   </form>
 </div>
