--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,7 @@
-html,
-body {
-  height: 100%;
-  margin: 0;
-}
-
 .container {
-  height: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px;
+  padding: 0px 5px 15px 25px;
 }
 
-.div1 {
-  width: 70%;
-  float: left;
-
-}
-
-.div2 {
-  width: 30%;
-  float: right;
-}
